Self_Paced_Exercices/Traffic_Management/Configuring_Ingress_and_Egress_Traffic/Gateway_enable_tls_passthrough/answer/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-nginx
  namespace: default
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: oriolfilter/https-nginx-demo
          imagePullPolicy: Always #Always
          ports:
            - containerPort: 80
            - containerPort: 443
